--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/sections/product-sections.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/sections/product-sections.phtml
@@ -2,36 +2,59 @@
 
 declare(strict_types=1);
 
-/** @var Details $block */
-/** @var Escaper $escaper */
-
 use Magento\Catalog\Block\Product\View\Details;
 use Magento\Framework\Escaper;
+use Hyva\Theme\ViewModel\SvgIcons;
+use Hyva\Theme\Model\ViewModelRegistry;
+use Satoshi\Theme\Block\Template;
 
+/** @var Details $block */
+/** @var Escaper $escaper */
+/** @var ViewModelRegistry $viewModels */
+/** @var SvgIcons $hyvaicons */
+/** @var Template $template */
+
+$hyvaicons = $viewModels->require(SvgIcons::class);
 $titleRenderer = $block->getChildBlock('product.section.title.renderer');
 $defaultTitleTemplate = $titleRenderer->getTemplate();
 
 ?>
-<div class="grid grid-cols-1 gap-8">
-    <?php
-    foreach ($block->getGroupSortedChildNames('detailed_info', '') as $sectionName) {
-        $sectionBlock  = $block->getLayout()->getBlock($sectionName);
-        $sectionHtml   = (string) $sectionBlock->toHtml();
-        $titleTemplate = $sectionBlock->getData('title_template') ?? $defaultTitleTemplate;
+<div>
+    <div class="grid grid-cols-1 gap-8">
+        <?php
+        foreach ($block->getGroupSortedChildNames('detailed_info', '') as $sectionName) {
+            $sectionBlock  = $block->getLayout()->getBlock($sectionName);
+            $sectionHtml   = (string) $sectionBlock->toHtml();
+            $titleTemplate = $sectionBlock->getData('title_template') ?? $defaultTitleTemplate;
 
-        if (empty(trim($sectionHtml))) {
-            continue;
-        }
-        ?>
-        <section x-data="Accordion('true', 300)" id="<?= $escaper->escapeHtmlAttr($sectionBlock->getNameInLayout()) ?>">
-            <?=
-            $titleRenderer->setTemplate($titleTemplate)
-                ->assign('sectionBlock', $sectionBlock)
-                ->toHtml()
+            if (empty(trim($sectionHtml))) {
+                continue;
+            }
             ?>
-            <div class="card w-full">
-                <?= /** @noEscape  */ $sectionHtml ?>
-            </div>
-        </section>
-    <?php } ?>
+            <section x-data="Accordion('true', 300)" id="<?= $escaper->escapeHtmlAttr($sectionBlock->getNameInLayout()) ?>">
+                <?=
+                $titleRenderer->setTemplate($titleTemplate)
+                    ->assign('sectionBlock', $sectionBlock)
+                    ->toHtml()
+                ?>
+                <div class="card w-full">
+                    <?= /** @noEscape  */ $sectionHtml ?>
+                </div>
+            </section>
+        <?php } ?>
+    </div>
+    <?= $template->render('Magento_Theme::html/components/share.phtml') ?>
+
+    <button
+        style="display: none"
+        x-show="typeof hidePreview === 'function'"
+        class="button button--ghost-primary animate-on-transition max-md:hidden w-full"
+        @click="hidePreview"
+        type="button"
+    >
+        <?= __('Hide product') ?>
+        <span class="button__icon button__icon--right text-lg">
+        <?= $hyvaicons->renderHtml('close'); ?>
+    </span>
+    </button>
 </div>
