INTERNAL-278: Remove unused styles

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/attributes.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/attributes.phtml
@@ -27,7 +27,7 @@ $product = $block->getProduct();
 <?php if ($attributes = $block->getAdditionalData()): ?>
     <div x-data="Accordion('true', 300)">
         <div
-            class="align-start animate-on-transition mb-8 flex flex-col"
+            class="align-start animate-on-transition flex flex-col"
         >
             <button class="flex items-center justify-between"
                     type="button"
