--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/sections/description.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/sections/description.phtml
@@ -30,7 +30,7 @@ $cssClasses = $block->getData('css_classes') ?? 'prose';
 ?>
 <div x-data="Accordion('true', 300)">
     <div
-        class="align-start animate-on-transition mb-8 flex flex-col"
+        class="align-start animate-on-transition flex flex-col"
     >
         <button class="flex items-center justify-between"
                 type="button"
